# beer-challenge

./: .gitignore  Makefile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
app/: urls.py
app/cqrs/: beer.py  dispatcher.py  dispenser.py  models.py
app/settings/: base.py
core/festival/application/command/: __init__.py  close_beer_command.py  close_beer_command_handler.py  create_beer_command.py  create_beer_command_handler.py  create_dispenser_command.py  create_dispenser_command_handler.py  open_dispenser_command.py  open_dispenser_command_handler.py  remove_beer_command.py  remove_beer_command_handler.py
core/festival/application/dto/: dispenser.py
core/festival/application/query/: __init__.py  get_beer_by_id_query.py  get_beer_by_id_query_handler.py  get_beers_query.py  get_beers_query_handler.py  get_dispenser_by_id_query.py  get_dispenser_by_id_query_handler.py  get_dispenser_profit_info_query.py  get_dispenser_profit_info_query_handler.py  get_dispensers_query.py  get_dispensers_query_handler.py
core/festival/domain/: beer.py  beer_repository.py  dispenser.py  dispenser_repository.py  errors.py
core/festival/domain/tests/: test_beer_business_rules_validation.py  test_dispenser_business_rules_validation.py
core/festival/tests/: __init__.py  beer_builder.py  dispenser_builder.py
core/utils/: models.py
docs/: help_erd.txt
festival/: models.py  serializers.py  urls.py  views.py
festival/cqrs/: beer.py  dispatcher.py
festival/migrations/: 0001_initial.py  0002_create_default_beer.py  0003_dispenser.py
static/: help.txt
(+20 files in other folders)
