[tool.poetry]
name = "RviewerPythonDjangoSkeleton"
version = "0.1.0"
description = ""
authors = ["rviewer-team <dev@rviewer.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"
drf-yasg = "^1.20.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[tool.django-stubs]
django_settings_module = "app.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
